fixed order estimages, and confirmation, and pos and orders
